# chitin

./: .gitignore  .prettierrc  AGENTS.md  Cargo.toml  README.md  ROADMAP.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  scientific_engine.yml
.github/workflows/: check.yml
assets/icons/: LICENSE-CODICON
crates/chitin-core/: Cargo.toml
crates/chitin-core/src/: lib.rs
crates/chitin-core/src/workspace/: error.rs  mod.rs  tree.rs
crates/chitin-desktop/: Cargo.toml
crates/chitin-desktop/src/: app.rs  main.rs
crates/chitin-desktop/src/commands/: mod.rs  workspace.rs
crates/chitin-desktop/src/components/: activity_bar.rs  document_area.rs  mod.rs  project_sidebar.rs  window_bar.rs  workspace_tree.rs
crates/chitin-ui/: Cargo.toml
crates/chitin-ui/benches/: tree_virtualization.rs
crates/chitin-ui/src/: lib.rs
crates/chitin-ui/src/components/: activity_bar.rs  mod.rs  sidebar.rs  tree.rs  window_bar.rs
crates/chitin-ui/src/themes/: builtins.rs  colors.rs  mod.rs  ui.rs
