[package]
name = "chitin-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
log = "0.4.33"
env_logger = "0.10"
chitin-core = { path = "../chitin-core" }
chitin-ui = { path = "../chitin-ui" }
gpui = "0.2.2"

[lints]
workspace = true
