[package]
name = "chitin-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Reusable GPUI components for chitin desktop application"

[dependencies]
gpui = "0.2.2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "tree_virtualization"
harness = false

[lints]
workspace = true
